Refactor traffic light controller structure; introduce OpposingTrafficLightController and enhance vehicle crossing logic